Resolve div bleeding into navbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,17 +32,16 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@media (min-width: 991px) {
+    .login-container {
+        margin-top: 100px;
+    }
+}
+
 .flex-container {
-    height: 98vh;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-@media (min-width: 991px) {
-    .flex-container {
-        height: 70vh;
-    }
 }
 
 .container-bg {
